[skip ci] debug gh settings

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -52,8 +52,13 @@ teams:
 branches:
   - name: main
     protection:
+      required_pull_request_reviews: null
       required_status_checks:
         strict: false
         contexts:
           - continuous-integration/drone/pr
       enforce_admins: false
+      restrictions:
+        apps: []
+        users: []
+        teams: []
