--- a/latest/Dockerfile.arm64v8
+++ b/latest/Dockerfile.arm64v8
@@ -1,6 +1,9 @@
 FROM arm64v8/golang:alpine@sha256:d34d005738c897bad9671117acf4a27fe7d5ab80e129bf2aba2fa7c344c416e4 as build
 
-RUN go install github.com/bazelbuild/buildtools/buildifier@5.1.0
+# renovate: datasource=github-releases depName=bazelbuild/buildtools
+ENV BUILDIFIER_VERSION="${BUILD_VERSION:-5.1.0}"
+
+RUN go install github.com/bazelbuild/buildtools/buildifier@${BUILDIFIER_VERSION}
 
 FROM owncloudci/alpine:arm64v8@sha256:0e6ffe8d075fa06c8efa273743cee0e72963a9a7fb46c815b3fd04e0aff77ed3
 
